<resources>
    <string name="app_name">PARS REMOTE</string>
    <string name="login_title">
        PARS REMOTE corporation
    </string>

    <string name="login">ورود</string>

    <string name="cmd_button1" formatted="true">[S1:%s]</string>
    <string name="cmd_button2" formatted="true">[S2:%s]</string>
    <string name="cmd_button3" formatted="true">[S3:%s]</string>
    <string name="cmd_button4" formatted="true">[S4:%s]</string>
    <string name="cmd_button5" formatted="true">[S5:%s]</string>
    <string name="cmd_params" formatted="true">[P;%s]</string>
    <string name="cmd_status">[STATUS]</string>

    <string name="setting_min_value">0</string>
    <string name="setting_max_value">100</string>

    <!-- Default values -->
    <string name="param1EditText">90</string>
    <string name="param2EditText">85</string>
    <string name="param3EditText">20</string>
    <string name="param4EditText">60</string>
    <string name="param5EditText">30</string>
    <string name="param6EditText">60</string>
    <string name="param7EditText">25</string>
    <string name="param8EditText">50</string>
    <string name="param9EditText">1</string>

    <!-- Default parameters name -->
    <string name="param_x_edit_text" formatted="true">"param%sEditText</string>

    <string name="password">گذرواژه</string>
    <string name="conneting_to_device">در حال اتصال به دستگاه</string>
    <string name="invalid_password">گذرواژه نادرست می باشد</string>
    <string name="device_not_found">دستگاه یافت نشد</string>
    <string name="connection_successfully">اتصال برقرار شد</string>
    <string name="connection_failed">خطا در اتصال به دستگاه</string>
    <string name="lock">قفل</string>
    <string name="full_open">باز کامل</string>
    <string name="oneway_pass">یک سو تردد</string>
    <string name="winter">زمستانه</string>
    <string name="device_settings">تنظیمات دستگاه</string>
    <string name="exit">خروج</string>
    <string name="automatic">اتوماتیک</string>
    <string name="back">بازگشت</string>
    <string name="old_password">گذرواژه جاری</string>
    <string name="save">ذخیره</string>
    <string name="load_data">فراخوانی اطلاعات</string>
    <string name="close_speed">سرعت بسته شدن</string>
    <string name="open_speed">سرعت باز شدن</string>
    <string name="low_speed_course">طول کورس با سرعت آهسته</string>
    <string name="winter_course">طول کورس زمستانه</string>
    <string name="low_speed">سرعت آهسته</string>
    <string name="change_coefficient">نرخ کاهش یا افزایش سرعت</string>
    <string name="motor_power">قدرت موتور در انتهای کورس بسته</string>
    <string name="door_full_close">درز درب در حالت بسته کامل</string>
    <string name="en_dis_gearbox">فعال یا غیرفعال قفل گیربکسی</string>
    <string name="reserve_1">رزرو 1</string>
    <string name="reserve_2">رزرو 2</string>
    <string name="reserve_3">رزرو 3</string>
    <string name="reserve_4">رزرو 4</string>
    <string name="reserve_5">رزرو 5</string>
    <string name="reserve_6">رزرو 6</string>
    <string name="reserve_7">رزرو 7</string>
    <string name="reserve_8">رزرو 8</string>
    <string name="reserve_9">رزرو 9</string>
    <string name="reserve_10">رزرو 10</string>
    <string name="reserve_11">رزرو 11</string>
    <string name="reset_to_default">تنظیمات کارخانه ای</string>
    <string name="change_password">تغییر گذرواژه</string>
    <string name="select_your_device">دستگاه مورد نظر خود را انتخاب نمایید</string>
    <string name="new_password">گذرواژه جدید</string>
    <string name="confirm_new_password">تکرار گذرواژه جدید</string>
    <string name="check_new_password">گذرواژه های جدید یکسان نیستند</string>
    <string name="invalid_old_pass">گذرواژه جاری نامعتبر است</string>
    <string name="max_pass_len" formatted="true">گذرواژه باید حداقل %s کاراکتر باشد</string>
    <string name="min_pass_len" formatted="true">گذرواژه باید حداکثر %s کاراکتر باشد</string>
    <string name="bluetooth_not_found">هیچ دستگاه بلوتوثی پیدا نشد</string>
    <string name="bt_connection_failed">اتصال با خطا مواجه شد</string>
</resources>
