<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.MainContainer"
    android:minWidth="320dp"
    tools:context=".ChangePasswordActivity">

    <Button
        android:id="@+id/resetButton"
        style="@style/AppTheme.MenuButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        style="@style/AppTheme.MenuButton.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resetButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/AppTheme.InputBoxLayout"
        android:hint="@string/old_password"
        app:layout_constraintBottom_toTopOf="@+id/newPasswordTextInput"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/resetButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordEditText"
            style="@style/AppTheme.InputBox.SingleLine.NumberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordTextInput"
        style="@style/AppTheme.InputBoxLayout"
        android:hint="@string/new_password"
        app:layout_constraintBottom_toTopOf="@+id/confirmNewPasswordTextInput"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/resetButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEditText"
            style="@style/AppTheme.InputBox.SingleLine.NumberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmNewPasswordTextInput"
        style="@style/AppTheme.InputBoxLayout"
        android:hint="@string/confirm_new_password"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/resetButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmNewPasswordEditText"
            style="@style/AppTheme.InputBox.SingleLine.NumberPassword" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>